--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,20 @@
 #savedForLater {
     margin-bottom: 30px;
 }
+
+/* overriding bootstrap.css default styles*/
+.btn-link {
+    padding-left: 0;
+}
+
+.icon-white, .nav-tabs > .active > a > [class^="icon-"], .nav-tabs > .active > a > [class*=" icon-"], .nav-pills > .active > a > [class^="icon-"], .nav-pills > .active > a > [class*=" icon-"], .nav-list > .active > a > [class^="icon-"], .nav-list > .active > a > [class*=" icon-"], .navbar-inverse .nav > .active > a > [class^="icon-"], .navbar-inverse .nav > .active > a > [class*=" icon-"], .dropdown-menu > li > a:hover > [class^="icon-"], .dropdown-menu > li > a:hover > [class*=" icon-"], .dropdown-menu > .active > a > [class^="icon-"], .dropdown-menu > .active > a > [class*=" icon-"], .dropdown-submenu:hover > a > [class^="icon-"], .dropdown-submenu:hover > a > [class*=" icon-"] {
+    /*background-image: url("../lib/img/glyphicons-halflings-white.png");*/
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /*background-image: url("../lib/img/glyphicons-halflings.png");*/
+}
+
+.icon-calendar {
+    background-position: -313px -49px;
+}
