--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,32 @@
     padding: 10px 25px;
 }
 
+.checkbox.inline.checkbox-label-btn-wide {
+    padding-left: 30px;
+    margin-right: 20px;
+}
+
+.checkbox-label-btn-promoFeature {
+    text-align: left;
+    border-color: #F09600;
+}
+
+.checkbox-label-btn-promoFeature h6 {
+    margin-bottom: 0;
+    font-size: 16px;
+    color: #666666;
+}
+
+.promoFeature-subTeaser, .promoFeature-costs {
+    display: inline-block;
+    margin-bottom: 10px;
+    color: #F09600;
+}
+
+.promo-img {
+    
+}
+
 .section {
     margin: 20px 0;
 }
@@ -82,6 +108,7 @@ input[type="radio"].toggle:checked + label {
 
 .editmode {
     border-color: #FAA732;
+    background: none;
 }
 
 .noUiSlider {
