--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ input[type="radio"].toggle:checked + label {
 }
 
 .editmode {
-    border-color: #FAA732;
+    border-color: #2382C8;
     background: none;
 }
 
@@ -143,14 +143,14 @@ input[type="radio"].toggle:checked + label {
     width: auto;
     padding: 0 7px;
     margin-bottom: 0;
-    background: #FAA732;
+    background: #2382C8;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
     color: #ffffff;
-    font-size: 14px;
+    font-size: 11px;
     line-height: 25px;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
