--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,10 @@
     margin: 20px 0;
 }
 
+#additional-payment-notes {
+    margin-top: -20px;
+}
+
 .btn-rounded {
     width: 27px;
     height: 27px;
