--- a/css/main.css
+++ b/css/main.css
@@ -96,8 +96,32 @@
     margin-top: 0;
 }
 
-.followSteps {
+.productImage {
+    float: left;
+    width: 90px;
+    height: 90px;
+    margin-right: 20px;
+}
 
+.productImageMain {
+    width: 140px;
+    height: 140px;
+}
+
+.addProductImagesOverlay {
+    background-color: #dfdfdf;
+    height: 100%;
+    text-align: center;
+}
+
+.addProductImageLink {
+    margin-top: 25px;
+    padding: 0;
+}
+
+.addProductImageLink img {
+    display: block;
+    margin: 0 auto;
 }
 
 .checkbox.inline.checkbox-label-btn {
