image upload bug fixes

--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,10 @@
     display: none;
 }
 
+.mainProductImageTitle {
+    clear: left;
+}
+
 .productImage .progress {
     position: absolute;
     bottom: 0;
