--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@
     float: left;
     width: 90px;
     height: 90px;
-    margin-right: 20px;
+    margin: 0 20px 20px 0 ;
 }
 
 .addProductImagesOverlay {
