--- a/css/main.css
+++ b/css/main.css
@@ -1,217 +1,180 @@
 /**********************************************************************
  * Selling-Form
  **********************************************************************/
-
 /* color orange: #f29106 */
 /* color blue: #213c90 */
 /* color btn-blue: #1946A0 */
 /* clor green: #A5B937 */
-
 #logo {
-    margin-top: 5px;
+	margin-top:5px;
 }
-
 #formNav {
-    margin: 40px 0;
+	margin:40px 0;
 }
-
-.stepIndicator > li > a {
-    position: relative;
-    width: 120px;
-    height: 30px;
-    padding: 12px;
-    background: #f29106;
-    border-radius: 0px;
-    color: #ffffff;
+.stepIndicator> li> a {
+	position:relative;
+	width:120px;
+	height:30px;
+	padding:12px;
+	background:#f29106;
+	border-radius:0px;
+	color:#ffffff;
 }
-
-.stepIndicator > li > a:after {
-    content: "";
-    position: absolute;
-    top: 0px;
-    right: -27px;
-    border-style: solid;
-    border-width: 27px 0 27px 27px;
-    border-color: transparent #f29106;
-    display: block;
-    width: 0;
-    z-index: 2;
+.stepIndicator> li> a:after {
+	content:"";
+	position:absolute;
+	top:0px;
+	right:-27px;
+	border-style:solid;
+	border-width:27px 0 27px 27px;
+	border-color:transparent #f29106;
+	display:block;
+	width:0;
+	z-index:2;
 }
-
-.stepIndicator > li > a:before {
-    content: "";
-    position: absolute;
-    top: -4px;
-    left: 146px;
-    border-style: solid;
-    border-width: 31px 0 31px 31px;
-    border-color: transparent #ffffff;
-    display: block;
-    width: 0;
-    z-index: 1;
+.stepIndicator> li> a:before {
+	content:"";
+	position:absolute;
+	top:-4px;
+	left:146px;
+	border-style:solid;
+	border-width:31px 0 31px 31px;
+	border-color:transparent #ffffff;
+	display:block;
+	width:0;
+	z-index:1;
 }
-
-.stepIndicator > li.done > a {
-    background-color: #A5B937;
+.stepIndicator> li.done> a {
+	background-color:#A5B937;
 }
-
-.stepIndicator > li.done > a:after {
-    border-color: transparent #A5B937;
+.stepIndicator> li.done> a:after {
+	border-color:transparent #A5B937;
 }
-
-.stepIndicator > li.todo > a {
-    background-color: #e5e5e5;
-    color: #1946a0;
+.stepIndicator> li.todo> a {
+	background-color:#e5e5e5;
+	color:#1946a0;
 }
-
-.stepIndicator > li.todo > a:after {
-    border-color: transparent #e5e5e5;
+.stepIndicator> li.todo> a:after {
+	border-color:transparent #e5e5e5;
 }
-
-.stepIndicator > li.active > a {
-    background-color: #f29106;
+.stepIndicator> li.active> a {
+	background-color:#f29106;
 }
-
-.stepIndicator > li.active > a:after {
-    border-color: transparent #f29106;
+.stepIndicator> li.active> a:after {
+	border-color:transparent #f29106;
 }
-
-.stepIndicator > li.active > a:hover {
-    background-color: #f29106;
+.stepIndicator> li.active> a:hover {
+	background-color:#f29106;
 }
-
-.stepIndicator > li > a > span {
-    margin-left: 25px;
+.stepIndicator> li> a> span {
+	margin-left:25px;
 }
-
-.stepIndicator > li:last-child > a:after {
-    border: 0;
+.stepIndicator> li:last-child> a:after {
+	border:0;
 }
-
 /* Category-Selection Step1 */
-
-					.navCat ul {
-						display:none;
-						}
-					.navCat:first-child ul{
-						display:block;
-						}
-					.navCat.span2 {
-						margin-left: 0 !important;
-						margin-right: 2.12766%;
-						width:18.2%;
-						}
-					.navCat.span2:last-child {
-						margin-right: 0;
-						}
-						
-					.navCat li {
-						}
-						
-					.navCat a {
-						color: #333;
-						padding-right: 25px !important;
-						position:relative;
-						border-bottom: 1px solid #CCCCCC;
-						}
-						
-					.navCat li.active a {
-						background-color:#fc9013;
-						}
-						
-					.navCat li i {
-						display:none;
-						position:absolute;
-						right: 5px;
-						top:7px;
-						}
-						
-					.navCat li.hasSub i, .navCat li.active i {
-						display:block;
-						}
-						
-					.navCat li.active i {
-						background-position: -288px 0;
-						}
-						
+.navCat ul {
+	display:none;
+}
+.navCat:first-child ul {
+	display:block;
+}
+.navCat.span2 {
+	margin-left:0 !important;
+	margin-right:2.12766%;
+	width:18.2%;
+}
+.navCat.span2:last-child {
+	margin-right:0;
+}
+.navCat li {
+}
+.navCat a {
+	color:#333;
+	padding-right:25px !important;
+	position:relative;
+	border-bottom:1px solid #CCCCCC;
+}
+.navCat li.active a {
+	background-color:#fc9013;
+}
+.navCat li i {
+	display:none;
+	position:absolute;
+	right:5px;
+	top:7px;
+}
+.navCat li.hasSub i, .navCat li.active i {
+	display:block;
+}
+.navCat li.active i {
+	background-position:-288px 0;
+}
 /* -?- */
-
 #savedForLater {
-    margin-bottom: 30px;
+	margin-bottom:30px;
 }
-
 #savedForLater h5 {
-    margin-top: 0;
+	margin-top:0;
 }
-
 .uploadProgressOverlay {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	display:none;
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
 }
-
 .removeImageOverlay {
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: #ffffff;
-    padding: 3px;
+	display:none;
+	position:absolute;
+	top:0;
+	right:0;
+	background:#ffffff;
+	padding:3px;
 }
-
 .uploadProgressSpinner {
-    position: absolute;
-    background: url("../img/loading.gif") no-repeat scroll 50% 50% rgba(255,255,255,0.7);
-    height: 100%;
-    width: 100%;
+	position:absolute;
+	background:url("../img/loading.gif") no-repeat scroll 50% 50% rgba(255,255,255,0.7);
+	height:100%;
+	width:100%;
 }
-
 .uploadCancelBtn {
-    z-index: 2;
-    display: none;
+	z-index:2;
+	display:none;
 }
-
 .mainProductImageTitle {
-    clear: left;
+	clear:left;
 }
-
 .productImage .progress {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    margin-bottom: 0;
-    border-radius: 0;
+	position:absolute;
+	bottom:0;
+	width:100%;
+	margin-bottom:0;
+	border-radius:0;
 }
-
 .productImage .progress .bar {
-    width: 0%;
+	width:0%;
 }
-
 /* File-Upload */
-
 .fileinput-button {
-    position: relative;
-    overflow: hidden;
-    height: 100%;
+	position:relative;
+	overflow:hidden;
+	height:100%;
 }
 .fileinput-button input {
-    position: absolute;
-    height: 100%;
-    top: 0;
-    right: 0;
-    margin: 0;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    font-size: 23px;
-    direction: ltr;
-    cursor: pointer;
+	position:absolute;
+	height:100%;
+	top:0;
+	right:0;
+	margin:0;
+	opacity:0;
+	filter:alpha(opacity=0);
+	font-size:23px;
+	direction:ltr;
+	cursor:pointer;
 }
-
 /* end file-upload */
-
 .productImage {
     position: relative;
     float: left;
@@ -219,207 +182,189 @@
     height: 90px;
     margin: 0 20px 20px 0 ;
 }
-
 .addProductImagesOverlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #dfdfdf;
-    text-align: center;
+	position:absolute;
+	top:0;
+	left:0;
+	height:100%;
+	width:100%;
+	background-color:#dfdfdf;
+	text-align:center;
 }
-
 .addProductImageLink {
-    margin-top: 15px;
-    padding: 0;
+	margin-top:15px;
+	padding:0;
 }
-
 .addProductImageLink img {
-    display: block;
-    margin: 0 auto;
+	display:block;
+	margin:0 auto;
 }
-
 .separatorFloated {
-    margin: 0 5px;
-    padding-top: 3px;
+	margin:0 5px;
+	padding-top:3px;
 }
-
 .checkbox.inline.checkbox-label-btn {
-    position: relative;
-    padding: 20px;
+	position:relative;
+	padding:20px;
 }
-
-.checkbox-label-btn > input {
-    position: absolute;
-    right: 5px;
-    top: 0;
+.checkbox-label-btn> input {
+	position:absolute;
+	right:5px;
+	top:0;
 }
-
 .checkbox.inline.btn-ricardoPay {
-    background-color: #F09600;
-    background-image: linear-gradient(to bottom, #FAAF4B, #F09600);
-    background-repeat: repeat-x;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    padding-left: 50px;
-    padding-right: 50px;
+	background-color:#F09600;
+	background-image:linear-gradient(to bottom, #FAAF4B, #F09600);
+	background-repeat:repeat-x;
+	border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	color:#FFFFFF;
+	text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25);
+	padding-left:50px;
+	padding-right:50px;
 }
-
 .checkbox.inline.checkbox-label-btn.btn-small {
-    padding: 10px 25px;
+	padding:10px 25px;
 }
-
 .checkbox.inline.checkbox-label-btn-wide {
-    padding-left: 30px;
-    margin-right: 20px;
+	padding-left:30px;
+	margin-right:20px;
 }
-
 .checkbox-label-btn-promoFeature {
-    text-align: left;
-    border-color: #F09600;
+	text-align:left;
+	border-color:#F09600;
 }
-
 .checkbox-label-btn-promoFeature h6 {
-    margin-bottom: 0;
-    font-size: 16px;
-    color: #666666;
+	margin-bottom:0;
+	font-size:16px;
+	color:#666666;
 }
-
 .promoFeature-subTeaser, .promoFeature-costs {
-    display: inline-block;
-    margin-bottom: 10px;
-    color: #F09600;
+	display:inline-block;
+	margin-bottom:10px;
+	color:#F09600;
 }
-
 .promo-img {
-
 }
-
 .section {
-    margin: 20px 0;
+	margin:20px 0;
 }
-
 #additional-payment-notes {
-    margin-top: -20px;
+	margin-top:-20px;
 }
-
 .btn-rounded {
-    width: 27px;
-    height: 27px;
-    margin-top: 1px;
-    border-radius: 50% 50% 50% 50%;
+	width:27px;
+	height:27px;
+	margin-top:1px;
+	border-radius:50% 50% 50% 50%;
 }
-
 /*http://stackoverflow.com/questions/5523735/how-to-make-a-radio-button-look-like-a-toggle-button */
 input[type="radio"].toggle {
-    display: none;
+	display:none;
 }
-
 input[type="radio"].toggle:checked + label {
-    color: #ffffff;
-    background-color: #1946A0;
-    background-image: linear-gradient(to bottom, #2382C8, #1946A0);
-    background-repeat: repeat-x;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	color:#ffffff;
+	background-color:#1946A0;
+	background-image:linear-gradient(to bottom, #2382C8, #1946A0);
+	background-repeat:repeat-x;
+	border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
-
 .table-sum tbody tr td:last-child {
-    text-align: right;
+	text-align:right;
 }
-
 .table-sum tbody tr:last-child td {
-    background-color: #FAA732;
-    background-image: linear-gradient(to bottom, #FBB450, #F89406);
-    background-repeat: repeat-x;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    font-weight: bold;
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	background-color:#FAA732;
+	background-image:linear-gradient(to bottom, #FBB450, #F89406);
+	background-repeat:repeat-x;
+	border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	font-weight:bold;
+	color:#FFFFFF;
+	text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25);
 }
-
 .table-first-column-title tr td:first-child {
-    color: #999999;
+	color:#999999;
 }
-
 .editmode {
-    border-color: #2382C8;
-    background: none;
+	border-color:#2382C8;
+	background:none;
 }
-
 .noUiSlider {
-    margin-top: 15px;
+	margin-top:15px;
 }
 
+.noUiSlider.connect a, .noUiSlider.connect.lower {
+    cursor: pointer;
+}
+
+.stepLabels {
+    width: 80%;
+}
+
+.stepLabels span:not(:first-child) {
+    margin-left: 36%;
+}
+
+/*********************************************************************
+ * Overriding noUiSlider default css
+ ********************************************************************/
+.noUiSlider.connect.disabled a, .noUiSlider.connect.lower.disabled {
+	background:none repeat scroll 0 0 #CCCCCC;
+	cursor:not-allowed;
+}
 /*********************************************************************
  * overriding bootstrap.css default styles
  *********************************************************************/
 label {
-    margin-bottom: 10px;
+	margin-bottom:10px;
 }
-
 .btn-link {
-    padding-left: 0;
+	padding-left:0;
 }
-
-.icon-white, .nav-tabs > .active > a > [class^="icon-"], .nav-tabs > .active > a > [class*=" icon-"], .nav-pills > .active > a > [class^="icon-"], .nav-pills > .active > a > [class*=" icon-"], .nav-list > .active > a > [class^="icon-"], .nav-list > .active > a > [class*=" icon-"], .navbar-inverse .nav > .active > a > [class^="icon-"], .navbar-inverse .nav > .active > a > [class*=" icon-"], .dropdown-menu > li > a:hover > [class^="icon-"], .dropdown-menu > li > a:hover > [class*=" icon-"], .dropdown-menu > .active > a > [class^="icon-"], .dropdown-menu > .active > a > [class*=" icon-"], .dropdown-submenu:hover > a > [class^="icon-"], .dropdown-submenu:hover > a > [class*=" icon-"] {
-    /*background-image: url("../lib/img/glyphicons-halflings-white.png");*/
+.icon-white, .nav-tabs> .active> a> [class^="icon-"], .nav-tabs> .active> a> [class*=" icon-"], .nav-pills> .active> a> [class^="icon-"], .nav-pills> .active> a> [class*=" icon-"], .nav-list> .active> a> [class^="icon-"], .nav-list> .active> a> [class*=" icon-"], .navbar-inverse .nav> .active> a> [class^="icon-"], .navbar-inverse .nav> .active> a> [class*=" icon-"], .dropdown-menu> li> a:hover> [class^="icon-"], .dropdown-menu> li> a:hover> [class*=" icon-"], .dropdown-menu> .active> a> [class^="icon-"], .dropdown-menu> .active> a> [class*=" icon-"], .dropdown-submenu:hover> a> [class^="icon-"], .dropdown-submenu:hover> a> [class*=" icon-"] {
+	/*background-image: url("../lib/img/glyphicons-halflings-white.png");*/
 }
-
 [class^="icon-"], [class*=" icon-"] {
-    /*background-image: url("../lib/img/glyphicons-halflings.png");*/
+	/*background-image: url("../lib/img/glyphicons-halflings.png");*/
 }
-
 .icon-calendar {
-    background-position: -313px -49px;
+	background-position:-313px -49px;
 }
-
 .icon-time {
-    background-position: -96px 0;
+	background-position:-96px 0;
 }
-
 .icon-bold, .icon-italic, .icon-list {
-    background-image: url("../lib/img/glyphicons-halflings.png");
+	background-image:url("../lib/img/glyphicons-halflings.png");
 }
-
 .icon-bold {
-    background-position: -167px -48px;
+	background-position:-167px -48px;
 }
-
 .icon-italic {
-    background-position: -192px -48px;
+	background-position:-192px -48px;
 }
-
 .icon-list {
-    background-position: -360px -48px;
+	background-position:-360px -48px;
 }
-
-.well > legend {
-    display: inline;
-    width: auto;
-    padding: 0 7px;
-    margin-bottom: 0;
-    background: #2382C8;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-    border-width: 1px;
-    border-style: solid;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-    color: #ffffff;
-    font-size: 11px;
-    line-height: 25px;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+.well> legend {
+	display:inline;
+	width:auto;
+	padding:0 7px;
+	margin-bottom:0;
+	background:#2382C8;
+	border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	border-radius:4px;
+	border-width:1px;
+	border-style:solid;
+	box-shadow:0 1px 0 rgba(255, 255, 255, 0.2) inset,0 1px 2px rgba(0, 0, 0, 0.05);
+	color:#ffffff;
+	font-size:11px;
+	line-height:25px;
+	text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25);
 }
-
 .well .table {
-    margin-bottom: 0;
+	margin-bottom:0;
 }
-
 /*********************************************************************
  * overriding noUIslider default styles
  *********************************************************************/
-
 .noUiSlider.horizontal {
-    width: 80%;
+	width:80%;
 }
