--- a/css/main.css
+++ b/css/main.css
@@ -418,3 +418,45 @@ label {
 .noUiSlider.horizontal {
     width: 80%;
 }
+
+.image-movers{
+    position: absolute;
+    width: 70px;
+    margin: 55px 0 0 -27px;
+}
+
+.image-movers .btn{
+    max-width: 20px;
+    height: 22px;
+    margin-top: 6px !important;
+    padding: 3px;
+    font-size: 20px;
+    cursor: pointer;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin-top: 1px;
+    line-height: 14px;
+    vertical-align: text-top;
+    background-repeat: no-repeat;
+    background-image: url("https://pics.ricardostatic.ch/contents/ch/assets/images/ricardo_icons_gray.png");
+    margin-left: 3px;
+}
+
+.image-movers .move-left{
+    float: left;
+    background-position: -405px -45px;
+}
+
+.image-movers .move-right{
+    float: right;
+    background-position: -430px -45px;
+}
+
+.productImages .span3 .productImage .move-left{
+    visibility: hidden;
+}
+
+.productImages .span9 .productImage:last-child .move-right{
+    visibility: hidden;
+}
