changed active color for duration bar

--- a/css/main.css
+++ b/css/main.css
@@ -560,7 +560,7 @@ fieldset h3 {
 }
 
 .noUiSlider.connect a, .noUiSlider.connect.lower {
-    background-color: #c5c5c5;
+    background-color: #c0d82a;
 }
 
 .noUiSlider {
