--- a/css/main.css
+++ b/css/main.css
@@ -28,13 +28,13 @@ h1, h2, h3, h4 {
 	
 .optionWithCosts{
 	font-size:11px;
-	color: #999;
+	color: #757575;
 	margin-left:10px;
 	}
 
 .optionalField{
 	font-size:11px;
-	color:#a6b825;
+	color:#757575;
 	}
 	
 .tooltip-inner {
@@ -159,7 +159,7 @@ h1, h2, h3, h4 {
 }
 
 .navCat .catSuggest a {
-    color: #999;
+    color: #757575;
 }
 .navCat .catSuggest .catAlternativ a {
     color: #fc9013;
@@ -308,10 +308,7 @@ h1, h2, h3, h4 {
 .checkbox.inline.checkbox-label-btn.btn-small {
     padding: 10px 25px;
 }
-.checkbox.inline.checkbox-label-btn-wide {
-    padding-left: 30px;
-    margin-right: 20px;
-}
+
 .checkbox-label-btn-promoFeature {
     text-align: left;
     border-color: #F09600;
@@ -355,7 +352,7 @@ h1, h2, h3, h4 {
 #listingType label.btn i {
     background-image: none;
     position: absolute;
-    border: 1px solid #999;
+    border: 1px solid #757575;
     border-radius: 4px;
     right: 7px;
     top: 7px;
@@ -422,7 +419,7 @@ input[type="radio"].toggle:checked + label {
     border-color: #bcd229;
 }
 #listingPaymentConditions button {
-    color: #999;
+    color: #757575;
     margin-bottom: 5px;
     width: 100%;
     position: relative;
@@ -459,7 +456,7 @@ input[type="radio"].toggle:checked + label {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 .table-first-column-title tr td:first-child {
-    color: #999999;
+    color: #757575;
 }
 
 /* Step 3 - Date & Time */
@@ -540,7 +537,7 @@ input[type="radio"].toggle:checked + label {
 #articlePreview img {
     border: 1px solid #FFFFFF;
     border-radius: 5px 5px 5px 5px;
-    box-shadow: 1px 1px 3px #999999;
+    box-shadow: 1px 1px 3px #757575;
     cursor: pointer;
     margin-bottom: 15px;
 }
@@ -648,9 +645,12 @@ label {
     width: 960px;
     margin-left: -480px;
 }
-/*********************************************************************
- * overriding noUIslider default styles
- *********************************************************************/
+
+.form-actions {
+    background: none;
+    border: none;
+    padding: 20px 0;
+}
 
 /*********************************************************************
  * styles for ImageMover in ImageUploader
