--- a/css/main.css
+++ b/css/main.css
@@ -789,6 +789,7 @@ label {
     background: none;
     border: none;
     padding: 20px 0;
+    margin-top: 0;
 }
 
 /*********************************************************************
@@ -846,7 +847,7 @@ label {
 
 .stepIndicator li a div {
     float: left;
-    max-width: 70px;
+    max-width: 85px;
 }
 
 .stepIndicator li a div:first-child {
