--- a/css/main.css
+++ b/css/main.css
@@ -786,12 +786,15 @@ label {
     width: 960px;
     margin-left: -480px;
 }
-
 .form-actions {
     background: none;
     border: none;
     padding: 20px 0;
     margin-top: 0;
+}
+.breadcrumb {
+    margin: 5px 0 0 0;
+    padding: 0;
 }
 
 /*********************************************************************
