--- a/css/main.css
+++ b/css/main.css
@@ -927,19 +927,19 @@ footer {
 }
 #vv_submenu.fr{
 
-left: 1188px !important;
-top: 682px !important;
+left: 819px !important;
+top: 397px !important;
 }
 
 .span6.de #vv_submenu.de{
 
-left: 248px !important;
+left: 358px !important;
 top: 398px !important;
 }
 
 .span12.de #vv_submenu.de{
 
-left: 676px !important;
+left: 706px !important;
 top: 363px !important;
 }
 
@@ -985,8 +985,8 @@ margin: 1px 5px;
 
     .de #arrow, .fr #arrow{
     position: absolute;
-top: -19px;
-right: -15px;
+    top: 0px;
+    right: 5px;
     }
 
     #DualEditorFR .mce-tinymce .mce-container-body:first-child .mce-container .mce-container-body .mce-toolbar, #DualEditorDE .mce-tinymce .mce-container-body:first-child .mce-container .mce-container-body .mce-toolbar{
@@ -1021,7 +1021,7 @@ right: -15px;
 
 .fr-row{visibility: hidden !important}
 
-.fr{display: none !important;}
+.fr:none(.mce-container){display: none !important;}
 
 label[for=inputPictures]{
     clear: both;}
@@ -1053,6 +1053,9 @@ body > .mce-container.mce-panel.mce-floatpanel:not(.mce-menu-sub) > .mce-contain
     display: none;
 }
 
+.de iframe, .fr iframe{
+    height: 100px ;
+}
 /*iframe#fr{
     margin-left: 30px;
 }
