--- a/css/main.css
+++ b/css/main.css
@@ -878,14 +878,14 @@ label {
  } 
  
    .stepIndicator li a div:last-child{
-    margin-left: 5px;
     position: absolute;
-    margin-left: 55px;
+    margin-left: 60px;
+    margin-top: 5px;
     z-index: 500;
  }
   
    .stepIndicator .stepN1 a div:last-child{
-    margin-left: 30px;
+    margin-left: 35px;
  }
 
 .stepIndicator li:last-child a div:last-child {
