--- a/css/main.css
+++ b/css/main.css
@@ -1063,6 +1063,10 @@ body > .mce-container.mce-panel.mce-floatpanel:not(.mce-menu-sub) > .mce-contain
 .stepIndicator.nav.nav-pills li a {
 cursor: default;
 }
+
+#swissIcons{
+    cursor: pointer;
+}
 /*iframe#fr{
     margin-left: 30px;
 }
